--- a/src/wasm/readme
+++ b/src/wasm/readme
@@ -1,10 +1,11 @@
 install emsdk first
 https://emscripten.org/docs/getting_started/downloads.html
 
-write ur c code
+write ur c/c++ code
 
-compile:
+to compile to standalone wasm file:
+
 emcc -O2 -s WASM=1 -s SIDE_MODULE=1 -o fib.wasm fib.c
 
 
-use *.wasm in rustsys
+use *.wasm in rustsys with corresponding path
