--- a/src/wasm/readme
+++ b/src/wasm/readme
@@ -1,7 +1,7 @@
 install emsdk first
 https://emscripten.org/docs/getting_started/downloads.html
 
-write ur c/c++ code
+write ur c code
 
 to compile to standalone wasm file:
 
